--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -258,10 +258,12 @@ en:
   mail_subject_unassign_status: "[%{team} - %{project}] A media item was unassigned from you"
   mail_subject_assign_task: "[%{team} - %{project}] A task was assigned to you"
   mail_subject_unassign_task: "[%{team} - %{project}] A task was unassigned from you"
+  mail_subject_update_status: "[%{team} - %{project}] A media item status was marked as %{status}"
   mail_assign_status: "%{author} assigned a media item to you. It's titled:"
   mail_unassign_status: "%{author} unassigned a media item from you. It's titled:"
   mail_assign_task: "%{author} assigned a task \"%{task}\" to you. It's on the media item titled:"
   mail_unassign_task: "%{author} unassigned a task \"%{task}\" from you. It's on the media item titled:"
+  mail_update_status: "%{author} marked \"%{title}\" as %{status}"
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "Keep screenshots"
   archive_archive_is: "Archive.is"
