--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -180,29 +180,29 @@ ar:
   role_none: عضو
   oembed_credit: تمت الإضافة من %{user} (%{role}) في %{date}
   oembed_notes_count:
-    zero: لا توجد ملحوظات
-    one: ملحوظة واحدة
-    two: ملحوظتان
-    few: '%{count} ملحوظات'
-    many: '%{count} ملحوظة'
-    other: '%{count} ملحوظات '
+    zero: "لا توجد ملحوظات"
+    one: "ملحوظة واحدة"
+    two: "ملحوظتان"
+    few: "%{count} ملحوظات"
+    many: "%{count} ملحوظة"
+    other: "%{count} ملحوظات "
   oembed_completed_tasks_count:
-    zero: لا توجد مهام مكتملة
-    one: مهمة مكتملة واحدة
-    two: مهمتان مكتملتان
-    few: '%{count} مهام مكتملة'
-    many: '%{count} مهمة مكتملة'
-    other: '%{count} مهام مكتملة'
+    zero: "لا توجد مهام مكتملة"
+    one: "مهمة مكتملة واحدة"
+    two: "مهمتان مكتملتان"
+    few: "%{count} مهام مكتملة"
+    many: "%{count} مهمة مكتملة"
+    other: "%{count} مهام مكتملة"
   oembed_verification_tasks: مهام التحقق من المعلومات
   oembed_expand_all: توسيع الكل
   oembed_collapse_all: طيّ الكل
   oembed_resolved_tasks_count:
-    zero: لا توجد مهام تحقق مكتملة
-    one: مهمة تحقق واحدة مكتملة
-    two: مهمتان تحقق مكتملتان
-    few: '%{count} مهام تحقق مكتملة'
-    many: '%{count} مهمة تحقق مكتملة'
-    other: '%{count}  مهام تحقق مكتملة'
+    zero: "لا توجد مهام تحقق مكتملة"
+    one: "مهمة تحقق واحدة مكتملة"
+    two: "مهمتان تحقق مكتملتان"
+    few: "%{count} مهام تحقق مكتملة"
+    many: "%{count} مهمة تحقق مكتملة"
+    other: "%{count}  مهام تحقق مكتملة"
   oembed_notes: ملحوظات
   pender_conflict: هذا الرابط قيد المعالجة بالفعل. من فضلك حاول مجدداً بعد بضع ثوانٍ.
   duplicate_source: المصدر موجود بالفعل
@@ -237,10 +237,12 @@ ar:
   mail_subject_unassign_status: "[%{team} - %{project}] تم إلغاء توكيل ميديا"
   mail_subject_assign_task: "[%{team} - %{project}] تم توكيل مهمة إليك"
   mail_subject_unassign_task: "[%{team} - %{project}] تم إلغاء توكيل مهمة"
+  mail_subject_update_status: "[%{team} - %{project}] تم تغيير حالة ميديا إلى %{status}"
   mail_assign_status: "وكّل(ت) %{author} إليك ميديا : "
   mail_unassign_status: "ألغى(ت) %{author} توكيل ميديا : "
   mail_assign_task: "وكّل(ت) %{author} إليك مهمة \"%{task}\" التي تنتمي إلى ميديا : "
   mail_unassign_task: "ألغى(ت) %{author} توكيل مهمة \"%{task}\" التي تنتمي إلى ميديا : "
+  mail_update_status: "قام %{author} بتغيير حالة \"%{title}\" إلى %{status}."
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "لقطات الشاشة من Keep"
   archive_archive_is: "Archive.is"
