--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -176,17 +176,17 @@ es:
   role_none: miembro
   oembed_credit: Añadido por %{user} (%{role}) %{date}
   oembed_notes_count:
-    one: Una nota
-    other: '%{count} notas'
+    one: "Una nota"
+    other: "%{count} notas"
   oembed_completed_tasks_count:
-    one: Una tarea completada
-    other: '%{count} tareas completadas'
+    one: "Una tarea completada"
+    other: "%{count} tareas completadas"
   oembed_verification_tasks: Tareas de verificación
   oembed_expand_all: Expandir todo
   oembed_collapse_all: Contraer todo
   oembed_resolved_tasks_count:
-    one: Una tarea de verificación completada
-    other: '%{count} tareas de verificación completadas'
+    one: "Una tarea de verificación completada"
+    other: "%{count} tareas de verificación completadas"
   oembed_notes: Notas
   pender_conflict: Este enlace ya está siendo analizado, intente de nuevo en unos segundos.
   duplicate_source: Fuente existente
@@ -221,10 +221,12 @@ es:
   mail_subject_unassign_status: "[%{team} - %{project}] Se te ha desasignado un elemento multimedia"
   mail_subject_assign_task: "[%{team} - %{project}] Se te ha asignado una tarea"
   mail_subject_unassign_task: "[%{team} - %{project}] Se te ha desasignado una tarea"
+  mail_subject_update_status: "[%{team} - %{project}] Un elemento multimedia fue marcado como %{status}"
   mail_assign_status: "%{author} te asignó el medio: "
   mail_unassign_status: "%{author} te desasignó el medio: "
   mail_assign_task: "%{author} te asignó la tarea  \"%{task}\" del medio: "
   mail_unassign_task: "%{author} te desasignó la tarea \"%{task}\" del medio: "
+  mail_update_status: "%{author}estableció el estado de \"%{title}\" a %{status}"
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "capturas de pantalla con Keep"
   archive_archive_is: "Archive.is"
