--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -151,8 +151,16 @@ ar:
         menu: تصدير صور المشروع
       delete_tasks:
         done: تم حذف المهام
-        are_you_sure_you_want_to_delete_the_tasks_from_team: هل أنت متأكد أنك تود حذف جميع المهام في هذا الفريق
-        all_the_following_tasks_will_be_deleted: '؟ سوف يتم حذف المهام الآتية :'
+        are_you_sure_you_want_to_delete_the_tasks_from_team:
+          html: "هل أنت متأكد أنك تود حذف جميع المهام في الفريق <strong>%{team}</strong>؟ سوف يتم حذف المهام اﻵتية:"
+      duplicate_team:
+        menu: نسخ الفريق
+        done: تم النسخ
+        are_you_sure_you_want_to_copy_team:
+          html: "هل أنت متأكد أنك تود نسخ الفريق <strong>%{team}</strong>؟ سوف يتم أيضًا نسخ جميع البيانات المتصلة."
+        the_team_is_being_copied: يتم نسخ الفريق
+        url_when_ready:
+          html: "بمجرد أن تصبح جاهزة ، سوف تكون نسخة الفريق متاحة في <strong>%{copy_url}</strong>"
   reset_password_instructions: "تعليمات إعادة ضبط كلمة المرور لدى %{app_name}"
   email_not_found: هذا البريد الإلكتروني غير موجود
   slack_channel_format_wrong: 'صيغة قناة Slack غير صحيحة - الصيغة المطلوبة هي `#general`'
