--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -147,8 +147,16 @@ es:
         menu: Exportar imágenes del proyecto
       delete_tasks:
         done: eliminó las tareas
-        are_you_sure_you_want_to_delete_the_tasks_from_team: ¿Seguro que quieres eliminar todas las tareas del equipo?
-        all_the_following_tasks_will_be_deleted: '? las siguientes tareas serán eliminadas:'
+        are_you_sure_you_want_to_delete_the_tasks_from_team:
+          html: "¿Seguro que quieres eliminar todas las tareas del equipo <strong>%{team}</strong>? Las siguientes tareas se eliminarán:"
+      duplicate_team:
+        menu: Duplicar equipo
+        done: 'copiado '
+        are_you_sure_you_want_to_copy_team:
+          html: "¿Seguro que quieres copiar el equipo <strong>%{team}</strong>? Todos los datos relacionados también serán copiados."
+        the_team_is_being_copied: El equipo está siendo duplicado
+        url_when_ready:
+          html: "Cuando esté listo, la copia del equipo estará disponible en <strong>%{copy_url}</strong>"
   reset_password_instructions: "%{app_name} instrucciones para restablecer la contraseña"
   email_not_found: 'Correo electrónico no encontrado '
   slack_channel_format_wrong: 'Canal de Slack inválido, debería tener este formato #general '
