--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -121,7 +121,7 @@ ar:
   slack_create_project_media: "أضاف *%{user}* %{type} جديد إلى مشروع *%{project}*: %{url}"
   slack_create_project_media_no_user: 'أضيف %{type} جديد إلى مشروع *%{project}*: %{url}'
   slack_create_task_message: "أضاف(ت) *%{user}* المهمة %{url} في مشروع *%{project}*%{assignment}%{create_note}"
-  slack_create_task_assignment: " موّكل إلى %{assignee}"
+  slack_create_task_assignment: " مُكَلَّف إلى %{assignee}"
   slack_create_task_note: " مع التعليق: %{note}"
   slack_answer_task: |-
       أجاب *%{user}* المهمة %{url} في مشروع *%{project}*: %{response}
@@ -240,21 +240,21 @@ ar:
     mailer:
       reset_password_instructions:
         instruction: "طلب أحدهم رابطًا لتغيير كلمة السر الخاصة بك، ويُمكن عمل ذلك من خلال الرابط التالي. <strong>يرجى الملاحظة أن مدة صلاحية الرابط %{expire} ساعات.</strong>"
-  error_user_is_not_a_team_member: "عذراً ، لا يمكنك توكيل مهام لغير أعضاء هذا الفريق"
-  slack_assign_report: "وكّل(ت) *%{user}* المهمة %{url} في مشروع *%{project}* إلى *%{assignee}*"
-  slack_unassign_report: "ألغى(ت) *%{user}* توكيل مهمة %{url} في مشروع *%{project}* من *%{assignee}*"
-  slack_assign_task: "وكّل(ت) *%{user}* المهمة %{url} في مشروع *%{project}* إلى *%{assignee}*"
-  slack_unassign_task: "ألغى(ت) *%{user}* توكيل مهمة %{url} في مشروع *%{project}* من *%{assignee}*"
+  error_user_is_not_a_team_member: "عذراً ، لا يمكنك تكليف مهام لغير أعضاء هذا الفريق"
+  slack_assign_report: "كلَّفَ(ت) *%{user}* المهمة %{url} في مشروع *%{project}* إلى *%{assignee}*"
+  slack_unassign_report: "ألغى(ت) *%{user}* تكليف مهمة %{url} في مشروع *%{project}* من *%{assignee}*"
+  slack_assign_task: "كلَّفَ(ت) *%{user}* المهمة %{url} في مشروع *%{project}* إلى *%{assignee}*"
+  slack_unassign_task: "ألغى(ت) *%{user}* تكليف مهمة %{url} في مشروع *%{project}* من *%{assignee}*"
   mail_see_it: "تستطيع أن تراه هنا : "
-  mail_subject_assign_status: "[%{team} - %{project}] تم توكيل ميديا إليك"
-  mail_subject_unassign_status: "[%{team} - %{project}] تم إلغاء توكيل ميديا"
-  mail_subject_assign_task: "[%{team} - %{project}] تم توكيل مهمة إليك"
-  mail_subject_unassign_task: "[%{team} - %{project}] تم إلغاء توكيل مهمة"
+  mail_subject_assign_status: "[%{team} - %{project}] تم تكليف ميديا إليك"
+  mail_subject_unassign_status: "[%{team} - %{project}] تم إلغاء تكليف ميديا"
+  mail_subject_assign_task: "[%{team} - %{project}] تم تكليف مهمة إليك"
+  mail_subject_unassign_task: "[%{team} - %{project}] تم إلغاء تكليف مهمة"
   mail_subject_update_status: "[%{team} - %{project}] تم تغيير حالة ميديا إلى %{status}"
-  mail_assign_status: "وكّل(ت) %{author} إليك ميديا : "
-  mail_unassign_status: "ألغى(ت) %{author} توكيل ميديا : "
-  mail_assign_task: "وكّل(ت) %{author} إليك مهمة \"%{task}\" التي تنتمي إلى ميديا : "
-  mail_unassign_task: "ألغى(ت) %{author} توكيل مهمة \"%{task}\" التي تنتمي إلى ميديا : "
+  mail_assign_status: "كلَّفَ(ت) %{author} إليك ميديا : "
+  mail_unassign_status: "ألغى(ت) %{author} تكليف ميديا : "
+  mail_assign_task: "كلَّفَ(ت) %{author} إليك مهمة \"%{task}\" التي تنتمي إلى ميديا : "
+  mail_unassign_task: "ألغى(ت) %{author} تكليف مهمة \"%{task}\" التي تنتمي إلى ميديا : "
   mail_update_status: "قام %{author} بتغيير حالة \"%{title}\" إلى %{status}."
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "لقطات الشاشة من Keep"
