--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -12,15 +12,27 @@ fr:
       not_applicable:
         label: Inconcluant
         description: Aucune conclusion définitive ne peut être tirée avec les données actuelles
-      in_progress:
-        label: En cours
-        description: Le travail a commencé, mais pas encore de conclusion tirée
       not_true:
         label: 'Faux'
         description: 'Conclusion : le rapport est faux'
       verified:
         label: Confirmé
         description: 'Conclusion : le rapport est confirmé'
+      pending:
+        label: En attente
+        description: 'Par défault : récemment ajouté, le travail n''a pas commencé'
+      in_progress:
+        label: En cours
+        description: Le travail a commencé, mais aucune traduction n'a été faite
+      translated:
+        label: Traduit
+        description: Traduction terminée, en attente de révision
+      ready:
+        label: Approuvé
+        description: Traduction revue et approuvée pour la publication
+      error:
+        label: Erreur
+        description: Traduction revue avec des erreurs signalées
     source:
       undetermined:
         label: Pas commencé
@@ -112,7 +124,7 @@ fr:
   rejected: rejetée
   mail_request_to_join_processed: Votre requête pour vous joindre à %{team} sur %{app_name} est %{status}
   mail_new_account: Votre nouveau compte sur %{app_name}
-  slack_update_status: "*%{user}* a modifié le statut de vérification pour *%{url}* dans *%{project}* de _%{previous_status}_ à *%{current_status}*"
+  slack_update_verification_status: "*%{user}* a modifié le statut de vérification pour *%{url}* dans *%{project}* de _%{from}_ à *%{to}*"
   slack_save_embed: "*%{user}* a modifié le titre d'un rapport dans *%{project}* de _%{from}_ à %{to}"
   slack_save_comment: "*%{user}* a rajouté un commentaire sur %{url} dans *%{project}* : %{comment}"
   slack_create_project: "*%{user}* a créé un projet : %{url}"
@@ -197,6 +209,8 @@ fr:
     one: "Une tâche complétée"
     other: "%{count} tâches complétées"
   oembed_verification_tasks: Tâches de vérification
+  oembed_tasks: Tâches
+  oembed_translations: Traductions
   oembed_expand_all: Développer tout
   oembed_collapse_all: Réduire tout
   oembed_resolved_tasks_count:
@@ -223,13 +237,16 @@ fr:
   account_exists: Ce compte existe déjà
   media_exists: Ce média existe déjà
   source_exists: Cette source existe déjà
+  banned_user: 'Désolé, votre compte a été banni de %{app_name}. Veuillez contacter %{support_email}si vous pensez qu''il s''agit d''une erreur.'
   devise:
     mailer:
       reset_password_instructions:
         instruction: "Quelqu'un a demandé un lien pour changer votre mot de passe : veuillez le trouver ci-dessous. <strong>Notez que ce lien expire dans %{expire} heures.</strong>"
   error_user_is_not_a_team_member: "Désolé, vous ne pouvez affecter des tâches qu'à des membres de cette équipe"
-  slack_assign_report: "*%{user}* a affecté %{url} à *%{assignee}* dans *%{project}*"
-  slack_unassign_report: "*%{user}* a désaffecté %{url} de *%{assignee}* dans *%{project}*"
+  slack_assign_verification_status: "*%{user}* a affecté %{url} à *%{assignee}* dans *%{project}*"
+  slack_unassign_verification_status: "*%{user}* a désaffecté %{url} de *%{assignee}* dans *%{project}*"
+  slack_assign_translation_status: "*%{user}* a affecté %{url} à *%{assignee}* dans *%{project}*"
+  slack_unassign_translation_status: "*%{user}* a désaffecté %{url} de *%{assignee}* dans *%{project}*"
   slack_assign_task: "*%{user}* a affecté la tâche %{url} dans *%{project}* à *%{assignee}*"
   slack_unassign_task: "*%{user}* a désaffecté la tâche %{url} dans *%{project}* de *%{assignee}*"
   mail_see_it: "Vous pouvez le/la visionner à :"
@@ -248,6 +265,8 @@ fr:
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
   project_export_email_title_csv: "Votre rapport de projet est prêt à télécharger"
+  workflow_status_not_valid: "Désolé, ce statut n'est pas valide"
+  workflow_status_permission_error: "Désolé, vous n'êtes pas autorisé à modifier ce statut"
   project_export_download_mail_csv: "Bonjour !\n\nVous avez demandé un rapport du projet %{project} - voici le lien pour le télécharger : %{link}\n\nLe rapport sera téléchargé sous forme de fichier compressé et chiffré. Pour le décompresser, utilisez le mot de passe %{password}.\n\nVeuillez noter que le lien ci-dessus expirera dans %{days} jours.\n\nAmicalement,\n\nL'équipe %{app}"
   project_export_email_title_images: "Les images de votre projet sont prêtes à télécharger"
   project_export_download_mail_images: "Bonjour !\n\nVous avez demandé à télécharger les images du projet %{project} - voici le lien : %{link}\n\nLes images seront téléchargées sous forme de fichier compressé et chiffré. Pour le décompresser, utilisez le mot de passe %{password}.\n\nVeuillez noter que le lien ci-dessus expirera dans %{days} jours.\n\nAmicalement,\n\nL'équipe %{app}"
